- Added Crystalline Heartwood to the loot table of Unbound Corrupter for the quest The Stone That Started A Revolution.
- Added Crystalline Heartwood to the loot table of Shandaral Spirit Wolf for the quest The Stone That Started A Revolution.
- Updated the flags of Crystalline Heartwood to allow every member of a group to loot it.
- Added Ancient Elven Masonry to the loot table of Unbound Trickster for the quest The Stone That Started A Revolution.
- Added Ancient Elven Masonry to the loot table of Unbound Dryad for the quest The Stone That Started A Revolution.
- Added Ancient Elven Masonry to the loot table of Unbound Ancient for the quest The Stone That Started A Revolution.
- Added Ancient Elven Masonry to the loot table of Unbound Ent for the quest The Stone That Started A Revolution.
- Added Ancient Elven Masonry to the loot table of Shandaral Druid Spirit for the quest The Stone That Started A Revolution.
- Added Ancient Elven Masonry to the loot table of Shandaral Hunter Spirit for the quest The Stone That Started A Revolution.
- Added Ancient Elven Masonry to the loot table of Shandaral Warrior Spirit for the quest The Stone That Started A Revolution.
- Added Ancient Elven Masonry to the loot table of Unbound Corrupter for the quest The Stone That Started A Revolution.
- Added Ancient Elven Masonry to the loot table of Shandaral Spirit Wolf for the quest The Stone That Started A Revolution.
- Updated the flags of Ancient Elven Masonry to allow every member of a group to loot it.

[2022-05-09]
- Updated the drop chance of Flesh Giant Spine from Pustulent Horror for the quests Neutralizing the Plague and Neutralizing the Plague.

[2022-05-10]
- Updated the flags of Cult of the Damned Research - Page 1 to allow every member of a group to loot it.
- Updated the flags of Cult of the Damned Research - Page 2 to allow every member of a group to loot it.
- Updated the flags of Cult of the Damned Research - Page 3 to allow every member of a group to loot it.