@@ -436,6 +436,11 @@ INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`
 DELETE FROM `creature_loot_template` WHERE `Entry`=31139 AND `Item`=44009;
 INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`, `Comment`) VALUES (31139, 44009, 50, 1, 'Pustulent Horror - Flesh Giant Spine');
 
+-- Emerald Acorn (Quest: Hope Within the Emerald Nightmare (Id: 13074))
+-- Nightmare Figment
+DELETE FROM `creature_loot_template` WHERE `Entry`=30627 AND `Item`=44790;
+INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`, `Comment`) VALUES (30627, 44790, 32, 1, 'Nightmare Figment - Emerald Acorn');
+
 -- Venomhide Ravasaur Egg (Quest: Venomhide Eggs (Id: 13887))
 -- Venomhide Ravasaur
 DELETE FROM `creature_loot_template` WHERE `Entry`=6508 AND `Item`=46364;
