@@ -431,6 +431,11 @@ INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (3086
 DELETE FROM `creature_questitem` WHERE `CreatureEntry`=31123 AND `ItemId`=43218;
 INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (31123, 2, 43218);
 
+-- Emerald Acorn (Quest: Hope Within the Emerald Nightmare (Id: 13074))
+-- Nightmare Figment
+DELETE FROM `creature_questitem` WHERE `CreatureEntry`=30627 AND `ItemId`=44790;
+INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (30627, 0, 44790);
+
 -- Venomhide Ravasaur Egg (Quest: Venomhide Eggs (Id: 13887))
 -- Venomhide Ravasaur
 DELETE FROM `creature_questitem` WHERE `CreatureEntry`=6508 AND `ItemId`=46364;
